# dspatchables

./: .bzrignore  .gitignore  .gitmodules  .travis.yml  CHANGES  CMakeLists.txt  LICENSE  README.md  meson.build
Components/: CMakeLists.txt  Constants.h
Components/Adder/: Adder.cpp  Adder.h  CMakeLists.txt
Components/Agc/: Agc.cpp  Agc.h  CMakeLists.txt
Components/AudioDevice/: AudioDevice.cpp  AudioDevice.h  AudioIn.cpp  AudioOut.cpp  CMakeLists.txt
Components/AudioDevice/RtAudio/: RtAudio.cpp
Components/Gain/: CMakeLists.txt  Gain.cpp  Gain.h
Components/InOut/: CMakeLists.txt  InOut.cpp  InOut.h
Components/Oscillator/: CMakeLists.txt  Oscillator.cpp  Oscillator.h
Components/Sockets/: CMakeLists.txt
Components/Sockets/Dependencies/: CMakeLists.txt
Components/Sockets/Mongoose/: mongoose.c
Components/Sockets/SocketIn/: CMakeLists.txt  SocketIn.cpp  SocketIn.h
Components/Sockets/SocketOut/: CMakeLists.txt  SocketOut.cpp  SocketOut.h  index.html
Components/Test/: Adder.cpp  AudioIn.cpp  AudioOut.cpp  AudioTrack.cpp  CMakeLists.txt  Channel.cpp  Effect.cpp  Instrument.cpp  Metronome.cpp  MidiIn.cpp  Recorder.cpp  RmsProbe.cpp  SoloMute.cpp  Transport.cpp
Components/VoxRemover/: CMakeLists.txt  VoxRemover.cpp  VoxRemover.h
Components/VoxRemover/kissfft/: fft_kiss.cpp  fft_kiss.h  kiss_fft.h
Components/VstHost/: CMakeLists.txt  VstHost.cpp  VstHost.h
Components/WaveReader/: CMakeLists.txt  WaveReader.cpp  WaveReader.h
Components/WaveWriter/: CMakeLists.txt  WaveWriter.cpp  WaveWriter.h
Components/WebRtc/: CMakeLists.txt
Components/WebRtc/Aec/: Aec.cpp  Aec.h  CMakeLists.txt
Components/WebRtc/Agc/: Agc.cpp  Agc.h  CMakeLists.txt
DSPatchables/: CMakeLists.txt
DSPatchables/AudioDevice/: AudioDevice.h  CMakeLists.txt
DSPatchables/DspGain/: DspGain.h
DSPatchables/DspOscillator/: DspOscillator.h
DSPatchables/DspWaveStreamer/: DspWaveStreamer.h
DSPatchables/Gain/: Gain.cpp
DSPatchables/Oscillator/: Oscillator.cpp
DSPatchables/WaveReader/: CMakeLists.txt
DspAdder/: CMakeLists.txt  DspAdder.cpp  DspAdder.h
DspAudioDevice/: CMakeLists.txt  DspAudioDevice.cpp  DspAudioDevice.h
DspGain/: CMakeLists.txt  DspGain.cpp  DspGain.h
DspOscillator/: CMakeLists.txt  DspOscillator.cpp  DspOscillator.h
DspWaveStreamer/: CMakeLists.txt  DspWaveStreamer.cpp  DspWaveStreamer.h
include/dspatch/: DspPluginLoader.h
link/: update_install_name.sh
scripts/: clang-format.bat  clang-format.sh
