#add_library(
#    Adder SHARED
#    Adder.cpp
#)

#add_library(
#    AudioIn SHARED
#    AudioIn.cpp
#)

#add_library(
#    AudioOut SHARED
#    AudioOut.cpp
#)

add_library(
    AudioTrack SHARED
    AudioTrack.cpp
)

add_library(
    Channel SHARED
    Channel.cpp
)

add_library(
    Effect SHARED
    Effect.cpp
)

add_library(
    Instrument SHARED
    Instrument.cpp
)

add_library(
    Metronome SHARED
    Metronome.cpp
)

add_library(
    MidiIn SHARED
    MidiIn.cpp
)

add_library(
    Recorder SHARED
    Recorder.cpp
)

add_library(
    RmsProbe SHARED
    RmsProbe.cpp
)

add_library(
    SoloMute SHARED
    SoloMute.cpp
)

add_library(
    Transport SHARED
    Transport.cpp
)

