add_library(
    Effect SHARED
    Effect.cpp
)

add_library(
    Instrument SHARED
    Instrument.cpp
)

add_library(
    Metronome SHARED
    Metronome.cpp
)

add_library(
    MidiIn SHARED
    MidiIn.cpp
)

add_library(
    RmsProbe SHARED
    RmsProbe.cpp
)

add_library(
    SoloMute SHARED
    SoloMute.cpp
)

add_library(
    Transport SHARED
    Transport.cpp
)
